# ptm-quantify-esem-2024

./: README.md  analysis.r  descendents.py  model_cards.py  turnover.ipynb
data/: PeaTMOSS_ANCIENT.db  README.md
research_quantitative-analysis-of-hf-main/: README.md  pyproject.toml
research_quantitative-analysis-of-hf-main/src/: heatmap_DirectDescendantsToDownloads.py  number_DirectDescendantsToDownloads.py  number_DirectDescendantsToParentModels.py  proportion_DirectDescendantsToLibrary.py
research_quantitative-analysis-of-hf-main/src/data/: number_of_direct_descendant_models_per_download.csv
research_quantitative-analysis-of-hf-main/src/pickle/: data.pickle
